service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  labels:
    name: portfolio-service
    app: portfoliowebsite
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: portfolio-pod
    app: portfoliowebsite
