asd.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
  labels:
    app: portfoliowebsite
spec:
  replicas: 1
  selector:
    matchLabels:
      name: portfolio-pod
      app: portfoliowebsite
  template:
    metadata:
      labels:
        name: portfolio-pod
        app: portfoliowebsite
    spec:
      containers:
      - name: portfolio
        image: gcr.io/gkeportfolio/portfolioimage@sha256:b50e35bfecfef7d87825f99e9dae0445d1e2c9048a02cdbde43e5fcd67fc89d9
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  labels:
    name: portfolio-service
    app: portfoliowebsite
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: portfolio-pod
    app: portfoliowebsite
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: portfolio-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: portfolioingressip
    networking.gke.io/managed-certificates: portfolio-certificate
spec:
  rules:
  - host: naveengarg.dev
    http:
      paths:
        - path: /
          backend:
            serviceName: portfolio-service
            servicePort: 80
